[package]
name = "dude"
version = "0.1.0"
authors = ["Meysam <meysam_salehi@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.1.2"
structopt = "0.3"
serde = {version = "1.0.106", features = ["derive"]}
serde_json = "1.0.51"
